added seek_paths and set_config, modified one or two counters in the structures but globally identical commit; about to erase the children / parents concept and replace it with neighbors and a function that checks if a neighbor is a child or not to set distances and get rooms

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -44,6 +44,7 @@ SRCFILES = \
 			ft_lstsort.c \
 			ft_lstcycle.c \
 			ft_lstadd.c \
+			ft_lstadd_sorted.c \
 			ft_lstadd_back.c \
 			ft_lstadd_new.c \
 			ft_lstnew.c \
